--- a/index.html
+++ b/index.html
@@ -5,12 +5,118 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
-    <link rel="stylesheet" href="style.css/style.css" class="css">
+    <link rel="stylesheet" href="style.css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800;900&family=Open+Sans:wght@400;800&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800;900&family=Lobster&family=Open+Sans:wght@400;800&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2> hello world
-    </h2>
-    <div></div>
-    
-</body>
+    <header class="header">
+        <div class="web">
+            <h1 class="web-title">Let's help thoes Who <br> more in Need</h1>
+            <p class="web-describtion">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim
+            </p>
+            <button class="btn-donate">Donate now</button>
+        </div>
+    </header>
+    <section class="donate-today-container">
+        <div class="donate-todaY">
+            <h2 class="donate-today-title">Donate Today</h2>
+            <p class="donate-today-describtion">                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="donate-amount-container">
+                <div class="amount">100TK</div>
+                <div class="amount">200TK</div>
+                <div class="amount">500TK</div>
+                <div class="amount">1000TK</div>
+                <div class="amount">5000TK</div>
+            </div>
+            <input class="other-amount" type="text" name="other amount" id="" placeholder="       Other Amount(TAKA)">
+            <hr>
+            <button class="btn-donate">Donate Now</button>
+    </section>
+    <section class="our-donate-plan">
+        <h2 class="our-donate-title">Our Donate Plan</h2>
+        <p class="our-donate-describtion">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim.</p>
+    </section>
+    <div class="our-donate-container">
+        <div class="our-donate-sub-container">
+            <div class="our-donate-sub-container1">
+                <img class="img-icons" src="../my-forth-repo/icons/food.png" alt="">
+                <h4 class="sub-title">
+                    Food for a family
+                </h4>
+                <p class="sub-describtion">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+        </div>
+        <div class="our-donate-sub-container">
+            <div class="our-donate-sub-container2">            
+                <img class="img-icons" src="../my-forth-repo/icons/shelter.png" alt="">
+                <h4 class="sub-title">
+                    Shetler for a family
+                </h4>
+                <p class="sub-describtion">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+        </div>
+        <div class="our-donate-sub-container" >
+            <div class="our-donate-sub-container3">           
+                <img class="img-icons" src="../my-forth-repo/icons/Frame-1.png" alt="">
+                <h4 class="sub-title">
+                    Education for a child
+                </h4>
+                <p class="sub-describtion">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p></div>
+        </div>
+    </div>
+    <!-- next main htmla -->
+    <section class="blogs">
+        <div class="sub-blogs">
+                <h3 class="blogs-title">Their lives depend on <br> your donation</h3>
+                <p class="blogs-describtion">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nihil rerum repellendus perferendis asperiores quas quia, eius accusamus dolores. Doloribus iure accusantium non excepturi beatae laborum ducimus repellendus dicta. Soluta!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci perspiciatis porro sunt. Laborum fugiat, cumque maiores assumenda aliquam esse placeat.
+                </p>
+                <button class="btn-blogs">
+                    How to Contribute?
+
+            </button>
+        </div>
+        <div class="sub-img">
+        </div>
+    </section>
+    <section class="blogs">
+        <div class="sub-img2">
+        </div>
+        <div class="sub-blogs2">
+            <h3 class="blogs-title">Their lives depend on <br> your donation</h3>
+            <p class="blogs-describtion">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nihil rerum repellendus perferendis asperiores quas quia, eius accusamus dolores. Doloribus iure accusantium non excepturi beatae laborum ducimus repellendus dicta. Soluta!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci perspiciatis porro sunt. Laborum fugiat, cumque maiores assumenda aliquam esse placeat.
+            </p>
+            <button class="btn-blogs">
+                How to Contribute?
+        </div>
+    </section>
+    <section class="get-my-updates">
+        <div class="sec-container">
+            <h3 class="get-update-title">
+                Get my updates
+            </h3>
+            <p class="get-update-describtion">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus ad numquam at commodi architecto iste inventore  
+            </p>
+        </div>
+    </section>
+    <div class="contact">
+            <div class="email">
+                <input class="your-email" type="email" name="Email" id="" placeholder="Youre mail">
+                <button class="btn-donate">subscribe</button>
+            </div>
+    </div>
+    <nav>
+        <div>
+            <h3 class="nav-title">Be Humble</h3>
+            <p class="nav-describtion">I'm gonna do it</p>
+        </div>
+
+    </nav>
+
 </html>
